--- a/anicons.sass
+++ b/anicons.sass
@@ -1,14 +1,40 @@
-// TIP: Don't use hundredths decimal place
-// TIP: Use a value from 0 to -0.5
-$lineweight: 0 // Changing this value from 0 either increases or decreases default line width
+// compileExpanded
 
-body
-	margin: 0
-	background-color: lightgrey
+/* TIP: Use the s1, s2, s3, s4, s5, and s6 classes
+   where s1 is thickest and s6 is thinnest icon
+	 line-weight.
+
+	 You can change the icon color in your own
+	 sass file (after importing anicons.sass)
+	 using the color() mixin where you specify
+	 the desired icon color as the parameter. */
+
+// TIPS:
+// Use an integer from 1 to 6, where 1 is thickest and 6 is thinnest
+$lineweight: 1 // Changing this value affects global line-weight across all icons
+
+
+$sizes: 0 -.1 -.2 -.3 -.4 -.5
+
+$lineweight: nth($sizes,$lineweight)
+
+=sizes($one: false, $two: false)
+	@for $i from 1 through 6
+		&.s#{$i}
+			$num: nth($sizes,$i)
+			@if $one
+				+width($num)
+			&::before
+				+width1($num)
+			&::after
+				@if $two
+					+width2($num)
+				@else
+					+width1($num)
+
 .anico
 	position: relative
 	transition: all 0.25s ease
-	margin: 25px
 	cursor: pointer
 	display: inline-block // CANNOT BE INLINE
 	font-size: 10px // DEFAULT ICON SIZE, CHANGE TO SUIT YOUR NEEDS
@@ -16,67 +42,93 @@ body
 	height: 3.6em !important
 	padding: 0 !important // DO NOT ADD PADDING TO ICONS
 	&::before, &::after
+		content: ''
+		display: block
 		position: absolute
-		transition: all 0.25s ease
+		transition: inherit
 		background-color: black
 
+=width1($weight)
+	top: 0em - $weight/2
+	left: 0.3em - $weight
+	width: 1em + $weight
+	border-left: 1em + $weight solid black
+	height: 3.6em + $weight
+=width2($weight)
+	right: 0.3em - $weight
+	height: 3.6em + $weight
+	width: 1em + $weight
+	top: 0em - $weight/2
 .anico.play
 	height: 3.6em
 	width: 3.6em
 	overflow: hidden
 	&::before
-		content: ''
-		display: block
-		top: 0
-		left: 0.3em
-		width: 1em
-		border-left: 1em solid black
 		border-bottom: 0em solid transparent
 		border-top: 0em solid transparent
-		height: 3.6em
-		background-color: transparent
+		background-color: transparent !important
+		top: 0em - $lineweight/2
+		left: 0.3em - $lineweight
+		width: 1em + $lineweight
+		border-left: 1em + $lineweight solid black
+		height: 3.6em + $lineweight
 	&::after
-		content: ''
-		display: block
-		right: 0.3em
-		height: 3.6em
-		width: 1em
-		top: 0
-	&.toggle
-		&::before
-			width: 0
-			height: 0
-			border-bottom: 1.8em solid transparent
-			border-top: 1.8em solid transparent
-			border-left: 3em solid black
-			padding-right: 0.5em
-		&::after
-			top: 1.8em
-			height: 0
+		right: 0.3em - $lineweight
+		height: 3.6em + $lineweight
+		width: 1em + $lineweight
+		top: 0em - $lineweight/2
+	+sizes(false,true)
 
+=width1($width)
+	border-bottom: 1.8em + $width/2 solid transparent
+	border-top: 1.8em + $width/2 solid transparent
+	border-left: 3em + $width + $width/2 solid black
+=width2($width)
+	top: 1.8em - $width/2
+
+.anico.play.toggle
+	&::before
+		width: 0
+		height: 0
+		border-bottom: 1.8em + $lineweight/2 solid transparent
+		border-top: 1.8em + $lineweight/2 solid transparent
+		border-left: 3em + $lineweight + $lineweight/2 solid black
+	&::after
+		top: 1.8em - $lineweight/2
+		height: 0
+	+sizes(false,true)
+
+=width($weight)
+	background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), black (1.5em - $weight/2), black (2.1em + $weight/2), transparent (1.4em + $weight/2))
+=width1($weight)
+	height: 0.6em + $weight
+	top: 0.3em - $weight
+=width2($weight)
+	height: 0.6em + $weight
+	bottom: 0.3em - $weight
 .anico.menu
 	height: 3.6em
 	width: 3.6em
-	background-image: linear-gradient(to bottom, transparent (1.5em -$lineweight/2), black (1.5em -$lineweight/2), black (2.1em + $lineweight/2), transparent (1.4em + $lineweight/2))
 	background-repeat: no-repeat
-	background-color: red
+	background-image: linear-gradient(to bottom, transparent (1.5em - $lineweight/2), black (1.5em - $lineweight/2), black (2.1em + $lineweight/2), transparent (1.4em + $lineweight/2))
 	&::before
-		content: ''
 		display: block
-		height: 0.6em + $lineweight
 		width: 3.6em
+		left: 0
+		height: 0.6em + $lineweight
 		top: 0.3em - $lineweight
-		left: 0
 	&::after
-		content: ''
 		display: block
-		height: 0.6em + $lineweight
 		width: 3.6em
-		bottom: 0.3em - $lineweight
 		left: 0
+		height: 0.6em + $lineweight
+		bottom: 0.3em - $lineweight
+	+sizes(true,true)
 
-
-
+=width1($weight)
+	top: 1.5em - $weight/2
+=width2($weight)
+	bottom: 1.5em - $weight/2
 .anico.menu.close
 	&.toggle
 		background-position: 3.6em 0
@@ -86,113 +138,110 @@ body
 		&::after
 			transform: rotate(-45deg)
 			bottom: 1.5em - $lineweight/2
-	
+		+sizes(false,true)
+
 .anico.menu.minus
 	&.toggle
 		&::before
 			top: 1.5em - $lineweight/2
 		&::after
 			bottom: 1.5em - $lineweight/2
-	
+		+sizes(false,true)
+
 .anico.menu.arrow
 	&.toggle
 		background-position: -0.35em 0
 		&::before
-			top: 1.08em// - $lineweight/2
-			width: 1.8em// + $lineweight
-			left: 1.85em// - $lineweight
+			top: 1.08em
+			width: 1.8em
+			left: 1.85em
 			border-radius: 0 .1em .1em 0
 			transform: rotate(45deg)
 		&::after
-			bottom: 1.08em// - $lineweight/2
-			width: 1.8em// + $lineweight
-			left: 1.85em// - $lineweight
+			bottom: 1.08em
+			width: 1.8em
+			left: 1.85em
 			border-radius: 0 .1em .1em 0
 			transform: rotate(-45deg)
 	&.left
 		transform: rotate(180deg)
 
+=width1($weight)
+	width: 2.1em - $weight/2
 .anico.menu.chevr
 	&.toggle
 		background-position: -3.7em
 		&::before
-			width: 2.1em - $lineweight/2
-			top: 0.95em// - $lineweight
+			top: 0.95em
 			left: 0.9em
 			border-radius: 0 .1em .1em 0
 			transform: rotate(45deg)
-		&::after
 			width: 2.1em - $lineweight/2
+		&::after
 			bottom: 0.95em
 			left: 0.9em
 			border-radius: 0 .1em .1em 0
 			transform: rotate(-45deg)
+			width: 2.1em - $lineweight/2
 		&.left
 			transform: rotate(180deg)
+		+sizes
 	&.left
 		transform: rotate(180deg)
-	
-.anico.chevr.horiz
+
+=width1($weight)
+	width: 2.1em - $weight/2
+	height: 0.6em + $weight
+.anico.chevr.verti, .anico.chevr.horiz
 	height: 3.6em
 	width: 3.6em
-	background: red
-	&.thin
-		$lineweight: -0.4
 	&::before
-		content: ''
 		display: block
-		width: 2.1em - $lineweight/2
 		top: 0.95em
 		left: 0.75em
 		transform: rotate(45deg)
-		height: 0.6em + $lineweight
 		border-radius: 0 .1em .1em 0
-	&::after
-		content: ''
-		display: block
 		width: 2.1em - $lineweight/2
+		height: 0.6em + $lineweight
+	&::after
+		display: block
 		bottom: 0.95em
 		left: 0.75em
 		transform: rotate(-45deg)
-		height: 0.6em + $lineweight
 		border-radius: 0 .1em .1em 0
-		
+		width: 2.1em - $lineweight/2
+		height: 0.6em + $lineweight
 	&.toggle
 		&::before
 			content: ''
-			display: block
 			transform: rotate(135deg)
-			
 		&::after
 			content: ''
-			display: block
 			transform: rotate(-135deg)
-			
+	+sizes
 
-.anico.chevr.verti
-	content: ''
-	display: block
+.anico.chevr.horiz
+	transform: rotate(270deg)
 
 
-.ani-dynamic
-	$duration: 0.5s
-	overflow: hidden
-	position: relative
-	transition: color $duration ease
-	user-select: none
-	cursor: pointer
-	span
-		z-index: 100
-		position: relative
-	.bg
-		padding: 0
-		margin: 0
-		position: absolute
-		border-radius: 50%
-		transition: opacity $duration ease, width 0s ease $duration, height 0s ease $duration
-		width: 0
-		height: inherit
-		transform: translate(-50%,-50%)
-	&:active
-		.bg
-			transition: width $duration ease, height $duration ease, opacity 0s
+=color($color)
+	&[class*='menu']
+		&.s1
+			$weight: -0.1
+			background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), $color (1.5em - $weight/2), $color (2.1em + $weight/2), transparent (1.4em + $weight/2)) !important
+		&.s2
+			$weight: -0.2
+			background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), $color (1.5em - $weight/2), $color (2.1em + $weight/2), transparent (1.4em + $weight/2)) !important
+		&.s3
+			$weight: -0.3
+			background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), $color (1.5em - $weight/2), black (2.1em + $weight/2), transparent (1.4em + $weight/2)) !important
+		&.s4
+			$weight: -0.4
+			background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), $color (1.5em - $weight/2), $color (2.1em + $weight/2), transparent (1.4em + $weight/2)) !important
+		&.s5
+			$weight: -0.5
+			background-image: linear-gradient(to bottom, transparent (1.5em - $weight/2), $color (1.5em - $weight/2), $color (2.1em + $weight/2), transparent (1.4em + $weight/2)) !important
+	&::before, &::after
+		background-color: $color !important
+	&[class*='play']::before
+		border-left-color: $color !important
