--- a/DEMO/mystyles.sass
+++ b/DEMO/mystyles.sass
@@ -1,11 +1,11 @@
 //compileExpanded
 
-@import ../../anicons.sass
+@import ../anicons.sass
 
 // After importing anicons.sass into your sass file... feel free to customize the anicons as you wish!
 
 .anico
-  transition: all 0.15s ease // You can change the transition
+  transition: all 0.15s ease // You can change the transition duration
   margin: 15px
 
 .myclass
